package com.example.appark.Activities.src;

public interface vmInterface {
    void getInfoUser(User user);
}
